# gpubk

./: .gitignore  CHANGELOG.md  CLUSTER.md  MANIFEST.in  README.md  README.zh-CN.md  RELEASING.md  SECURITY.md  TELEMETRY.md  UPGRADING.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
benchmarks/: scheduler_queue.py  usage_store.py
deploy/: bk-monitor.service  bk-worker.service
docs/: ARCHITECTURE.md  CLUSTER.md  GUIDE.md  GUIDE.zh-CN.md  RELEASING.md  TELEMETRY.md  UPGRADING.md
src/bk/: __init__.py  admin.py  admin_cluster.py  admin_data.py  admin_info.py  admin_services.py  advisor.py  allocator.py  announcements.py  broker.py  cli.py  cluster.py  cluster_mcp.py  cluster_transport.py  cluster_tui.py  collector_status.py  config.py  diagnostics.py  fileio.py  gpu.py  granularity.py  job_recovery.py  joblogs.py  jsonl.py  launch_guard.py  ledger_schema.py  live_usage_demo.py  login_hook.py  login_notice.py  mcp_server.py  models.py  monitor.py  node_identity.py  policy.py  schedule_index.py  scheduler.py  service.py  sharing.py  skill.py  storage.py  (+17 more)
src/bk/data/codex-skill/bk-gpu-scheduler/references/: protocol.md
src/bk/data/codex-skill/gpubk/: SKILL.md
src/bk/data/codex-skill/gpubk/agents/: openai.yaml
src/bk/data/codex-skill/gpubk/references/: protocol.md
src/bk/data/systemd/: bk-monitor.service  bk-worker.service
src/bk/data/systemd/system/: gpubk-broker.service  gpubk-monitor.service
tests/: test_admin.py  test_admin_cluster.py  test_admin_data.py  test_admin_info.py  test_admin_services.py  test_advisor.py  test_allocator.py  test_announcements.py  test_architecture.py  test_broker.py  test_cli.py  test_cluster.py  test_cluster_acceptance.py  test_cluster_integration.py  test_cluster_mcp.py  test_cluster_transport.py  test_cluster_tui.py  test_collector_status.py  test_config.py  test_diagnostics.py  test_fileio.py  test_gpu.py  test_job_recovery.py  test_joblogs.py  test_jsonl.py  test_launch_guard.py  test_live_usage_demo.py  test_login_notice.py  test_mcp_integration.py  test_mcp_server.py  test_monitor.py  test_node_identity.py  test_policy.py  test_release.py  test_release_artifacts.py  test_release_promotion.py  test_remote_acceptance.py  test_schedule_index.py  test_scheduler.py  test_service.py  (+17 more)
tests/fixtures/usage/v1/: event.json  rollup.json  store.json
tools/: acceptance_remote.py  cluster_acceptance.py  live_usage_demo.py  remote_acceptance.py  validate_release_promotion.py  verify_index_artifacts.py
