[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "gpubk"
dynamic = ["version"]
description = "Offline, load-aware GPU booking CLI, curses TUI, worker, and agent interface."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "lzzmm", email = "cortexcyh@gmail.com" }]
maintainers = [{ name = "lzzmm", email = "cortexcyh@gmail.com" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["gpu", "scheduler", "booking", "tui", "nvml", "mcp", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Systems Administration",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lzzmm/GPUbk"
Repository = "https://github.com/lzzmm/GPUbk"
Issues = "https://github.com/lzzmm/GPUbk/issues"
Changelog = "https://github.com/lzzmm/GPUbk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
gpu = ["nvidia-ml-py>=12"]
mcp = ["mcp>=1.28.1,<2"]
all = ["nvidia-ml-py>=12", "mcp>=1.28.1,<2"]

[project.scripts]
bk = "bk.entrypoint:main"
bk-mcp = "bk.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bk = ["data/**/*"]

[tool.setuptools.dynamic]
version = { attr = "bk.__version__" }

[tool.ruff]
target-version = "py310"

[tool.coverage.run]
branch = true
patch = ["subprocess"]
source = ["bk"]

[tool.coverage.paths]
source = [
  "src/bk",
  "*/site-packages/bk",
]

[tool.coverage.report]
fail_under = 65
show_missing = true
skip_covered = true
